--- a/environment.yml
+++ b/environment.yml
@@ -118,7 +118,7 @@ dependencies:
     - smmap==5.0.0
     - threadpoolctl==3.1.0
     - tokenizers==0.12.1
-    - torchsummary==1.5.1
+    - torchinfo==1.7.0
     - tqdm==4.64.0
     - transformers==4.19.3
     - typing-extensions==4.2.0
