Adding cluster script for explanation generation

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ cached_datasets
 cached_models
 __pycache__
 model_outputs
-explanation_outputs 
+explanation_outputs_old 
+test_explanation_outputs 
