--- a/environment.yml
+++ b/environment.yml
@@ -126,4 +126,5 @@ dependencies:
     - wrapt==1.14.1
     - xxhash==3.0.0
     - yarl==1.7.2
+    - captum==0.5.0
 prefix: /home/daniel/miniconda3/envs/ms21ddr_llms
