Updating explanation script to test hans

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ __pycache__
 model_outputs
 explanation_outputs_old 
 test_explanation_outputs 
-dn_model_explanation_outputs
+dn_model_explanation_outputs*
+explanation_graphs
