--- a/environment.yml
+++ b/environment.yml
@@ -127,4 +127,5 @@ dependencies:
     - xxhash==3.0.0
     - yarl==1.7.2
     - captum==0.5.0
+    - overrides==6.1.0
 prefix: /home/daniel/miniconda3/envs/ms21ddr_llms
