updating scripts for ensemble explanations

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ explanation_graphs_scale
 explanation_outputs
 cached_examples
 old_graphs 
+layer_randomization_graphs_scale
+layer_randomization_graphs_diff_archs 
+scratch.py 
